--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,15 @@
-# Drupal editor configuration normalization
-# @see http://editorconfig.org/
+# This file is for unifying the coding style for different editors and IDEs
+# editorconfig.org
 
-# This is the top-most .editorconfig file; do not search in parent directories.
+# PHP PSR-2 Coding Standards
+# http://www.php-fig.org/psr/psr-2/
+
 root = true
 
-# All files.
-[*]
-end_of_line = LF
-indent_style = space
-indent_size = 4
+[*.php]
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
-
-[{composer.json,composer.lock}]
+trim_trailing_whitespace = true
+indent_style = space
 indent_size = 4
