--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,12 @@
         "optimize-autoloader": true,
         "sort-packages": true
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        },
+        "class": "GovCMS\\Extras\\Package\\Plugin"
+    },
     "scripts": {
         "phpcs": "phpcs --standard=PSR2 -n src"
     },
